kubernetes/apps/agentgateway-system/agentgateway/app/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: agentgateway
spec:
  controllerName: agentgateway.dev/agentgateway
  parametersRef:
    group: agentgateway.dev
    kind: AgentgatewayParameters
    name: agw-params
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ai-gateway
  annotations:
    external-dns.alpha.kubernetes.io/target: ai-gw.${SECRET_DOMAIN}
spec:
  gatewayClassName: agentgateway
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: ai-gw.${SECRET_DOMAIN}
      io.cilium/lb-ipam-ips: "192.168.22.147"
    labels:
      network.cilium.io/lb-ingress: "true"
      network.cilium.io/gateway-proxy: "true"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: matherly-net-production-tls
            namespace: network
