kubernetes/apps/agentgateway-system/agentgateway/app/mcproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-tools-route
spec:
  parentRefs:
    - name: ai-gateway
      namespace: agentgateway-system
      sectionName: https
  hostnames:
    - "mcp-gw.matherly.net"
    - "ai-gw.matherly.net"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /mcp/obot
      backendRefs:
        - name: obot-obot
          namespace: obot
          kind: Service
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /mcp/kagent
      backendRefs:
        - name: kagent-ui
          namespace: kagent
          kind: Service
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /mcp/flux
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /mcp
      backendRefs:
        - name: flux-mcp-flux-operator-mcp
          namespace: flux-system
          kind: Service
          port: 9090
